add update product api
